cmss/main/default/objects/NonLifeInsurance__c/NonLifeInsurance__c.object-meta.xml
<CustomObject>
    <label>Non Life Insurance</label>
    <nameField>
        <displayFormat>NP-{000000}</displayFormat>
        <label>Non Life Insurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Life Insurances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>