cmss/main/default/objects/NonLifeInsurance__c/fields/EstateHeading__c.field-meta.xml
<CustomField>
    <fullName>EstateHeading__c</fullName>
    <label>Estate Heading</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>56</fullName>
            </value>
            <value>
                <fullName>61</fullName>
            </value>
            <value>
                <fullName>62</fullName>
            </value>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>68</fullName>
            </value>
            <value>
                <fullName>69</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>89</fullName>
            </value>
            <value>
                <fullName>92</fullName>
            </value>
            <value>
                <fullName>93</fullName>
            </value>
            <value>
                <fullName>94</fullName>
            </value>
            <value>
                <fullName>95</fullName>
            </value>
            <value>
                <fullName>96</fullName>
            </value>
            <value>
                <fullName>114</fullName>
            </value>
            <value>
                <fullName>115</fullName>
            </value>
            <value>
                <fullName>116</fullName>
            </value>
            <value>
                <fullName>117</fullName>
            </value>
            <value>
                <fullName>118</fullName>
            </value>
            <value>
                <fullName>119</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>121</fullName>
            </value>
            <value>
                <fullName>122</fullName>
            </value>
            <value>
                <fullName>123</fullName>
            </value>
            <value>
                <fullName>124</fullName>
            </value>
            <value>
                <fullName>125</fullName>
            </value>
            <value>
                <fullName>126</fullName>
            </value>
            <value>
                <fullName>127</fullName>
            </value>
            <value>
                <fullName>128</fullName>
            </value>
            <value>
                <fullName>129</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>