cmss/main/default/objects/NonLifeInsurance__c/fields/Indexing__c.field-meta.xml
<CustomField>
    <fullName>Indexing__c</fullName>
    <label>Indexing</label>
    <length>3</length>
    <type>Text</type>
</CustomField>