cmss/main/default/objects/NonLifeInsurance__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <label>Limit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>