cmss/main/default/objects/NonLifeInsurance__c/fields/Participation__c.field-meta.xml
<CustomField>
    <fullName>Participation__c</fullName>
    <label>Participation</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>