cmss/main/default/objects/NonLifeInsurance__c/fields/PremiumWithDiscount__c.field-meta.xml
<CustomField>
    <fullName>PremiumWithDiscount__c</fullName>
    <label>Premium With Discount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>